# OpenGL2DGame

./: README.md  buildpro.sh
openglDemo/: CMakeLists.txt
openglDemo/inc/: ball_object.h  game.h  game_level.h  game_object.h  particle_generator.h  post_processor.h  shader.h  sprite_renderer.h
openglDemo/level/: one.lvl
openglDemo/shader/: particle.fs  particle.vs  post_processing.fs  post_processing.vs  sprite.fs  sprite.vs
openglDemo/src/: ball_object.cpp  game.cpp  game_level.cpp  game_object.cpp  main.cpp  particle_generator.cpp  post_processor.cpp  sprite_renderer.cpp
